seaqt/QtWidgets/gen_qlistwidget.nim

proc fcQListWidget_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_leaveEvent".}
proc fQListWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_moveEvent".}
proc fcQListWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_moveEvent".}
proc fQListWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_closeEvent".}
proc fcQListWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_closeEvent".}
proc fQListWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_tabletEvent".}
proc fcQListWidget_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_tabletEvent".}
proc fQListWidget_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_actionEvent".}
proc fcQListWidget_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_actionEvent".}
proc fQListWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_showEvent".}
proc fcQListWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_showEvent".}
proc fQListWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_hideEvent".}
proc fcQListWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_hideEvent".}
proc fQListWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QListWidget_virtualbase_nativeEvent".}
proc fcQListWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_nativeEvent".}
proc fQListWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QListWidget_virtualbase_metric".}
proc fcQListWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_metric".}
proc fQListWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QListWidget_virtualbase_initPainter".}
proc fcQListWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_initPainter".}
proc fQListWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QListWidget_virtualbase_redirected".}
proc fcQListWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_redirected".}
proc fQListWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QListWidget_virtualbase_sharedPainter".}
proc fcQListWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_sharedPainter".}
proc fQListWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_childEvent".}
proc fcQListWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_childEvent".}
proc fQListWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_customEvent".}
proc fcQListWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_customEvent".}
proc fQListWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QListWidget_virtualbase_connectNotify".}
proc fcQListWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_connectNotify".}
proc fQListWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QListWidget_virtualbase_disconnectNotify".}
proc fcQListWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_disconnectNotify".}
proc fcQListWidget_delete(self: pointer) {.importc: "QListWidget_delete".}


func init*(T: type gen_qlistwidget_types.QListWidgetItem, h: ptr cQListWidgetItem): gen_qlistwidget_types.QListWidgetItem =
  T(h: h)
proc create*(T: type gen_qlistwidget_types.QListWidgetItem, ): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new())

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, text: string): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new2(struct_miqt_string(data: text, len: csize_t(len(text)))))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, icon: gen_qicon_types.QIcon, text: string): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new3(icon.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, other: gen_qlistwidget_types.QListWidgetItem): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new4(other.h))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, listview: gen_qlistwidget_types.QListWidget): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new5(listview.h))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, listview: gen_qlistwidget_types.QListWidget, typeVal: cint): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new6(listview.h, typeVal))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, text: string, listview: gen_qlistwidget_types.QListWidget): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new7(struct_miqt_string(data: text, len: csize_t(len(text))), listview.h))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, text: string, listview: gen_qlistwidget_types.QListWidget, typeVal: cint): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new8(struct_miqt_string(data: text, len: csize_t(len(text))), listview.h, typeVal))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, icon: gen_qicon_types.QIcon, text: string, listview: gen_qlistwidget_types.QListWidget): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new9(icon.h, struct_miqt_string(data: text, len: csize_t(len(text))), listview.h))

proc create*(T: type gen_qlistwidget_types.QListWidgetItem, icon: gen_qicon_types.QIcon, text: string, listview: gen_qlistwidget_types.QListWidget, typeVal: cint): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem.init(fcQListWidgetItem_new10(icon.h, struct_miqt_string(data: text, len: csize_t(len(text))), listview.h, typeVal))

proc clone*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qlistwidget_types.QListWidgetItem =
  gen_qlistwidget_types.QListWidgetItem(h: fcQListWidgetItem_clone(self.h))

proc listWidget*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qlistwidget_types.QListWidget =
  gen_qlistwidget_types.QListWidget(h: fcQListWidgetItem_listWidget(self.h))

proc setSelected*(self: gen_qlistwidget_types.QListWidgetItem, select: bool): void =
  fcQListWidgetItem_setSelected(self.h, select)

proc isSelected*(self: gen_qlistwidget_types.QListWidgetItem, ): bool =
  fcQListWidgetItem_isSelected(self.h)

proc setHidden*(self: gen_qlistwidget_types.QListWidgetItem, hide: bool): void =
  fcQListWidgetItem_setHidden(self.h, hide)

proc isHidden*(self: gen_qlistwidget_types.QListWidgetItem, ): bool =
  fcQListWidgetItem_isHidden(self.h)

proc flags*(self: gen_qlistwidget_types.QListWidgetItem, ): cint =
  cint(fcQListWidgetItem_flags(self.h))

proc setFlags*(self: gen_qlistwidget_types.QListWidgetItem, flags: cint): void =
  fcQListWidgetItem_setFlags(self.h, cint(flags))

proc text*(self: gen_qlistwidget_types.QListWidgetItem, ): string =
  let v_ms = fcQListWidgetItem_text(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setText*(self: gen_qlistwidget_types.QListWidgetItem, text: string): void =
  fcQListWidgetItem_setText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc icon*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qicon_types.QIcon =
  gen_qicon_types.QIcon(h: fcQListWidgetItem_icon(self.h))

proc setIcon*(self: gen_qlistwidget_types.QListWidgetItem, icon: gen_qicon_types.QIcon): void =
  fcQListWidgetItem_setIcon(self.h, icon.h)

proc statusTip*(self: gen_qlistwidget_types.QListWidgetItem, ): string =
  let v_ms = fcQListWidgetItem_statusTip(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setStatusTip*(self: gen_qlistwidget_types.QListWidgetItem, statusTip: string): void =
  fcQListWidgetItem_setStatusTip(self.h, struct_miqt_string(data: statusTip, len: csize_t(len(statusTip))))

proc toolTip*(self: gen_qlistwidget_types.QListWidgetItem, ): string =
  let v_ms = fcQListWidgetItem_toolTip(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setToolTip*(self: gen_qlistwidget_types.QListWidgetItem, toolTip: string): void =
  fcQListWidgetItem_setToolTip(self.h, struct_miqt_string(data: toolTip, len: csize_t(len(toolTip))))

proc whatsThis*(self: gen_qlistwidget_types.QListWidgetItem, ): string =
  let v_ms = fcQListWidgetItem_whatsThis(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setWhatsThis*(self: gen_qlistwidget_types.QListWidgetItem, whatsThis: string): void =
  fcQListWidgetItem_setWhatsThis(self.h, struct_miqt_string(data: whatsThis, len: csize_t(len(whatsThis))))

proc font*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qfont_types.QFont =
  gen_qfont_types.QFont(h: fcQListWidgetItem_font(self.h))

proc setFont*(self: gen_qlistwidget_types.QListWidgetItem, font: gen_qfont_types.QFont): void =
  fcQListWidgetItem_setFont(self.h, font.h)

proc textAlignment*(self: gen_qlistwidget_types.QListWidgetItem, ): cint =
  fcQListWidgetItem_textAlignment(self.h)

proc setTextAlignment*(self: gen_qlistwidget_types.QListWidgetItem, alignment: cint): void =
  fcQListWidgetItem_setTextAlignment(self.h, alignment)

proc setTextAlignment2*(self: gen_qlistwidget_types.QListWidgetItem, alignment: cint): void =
  fcQListWidgetItem_setTextAlignmentWithAlignment(self.h, cint(alignment))

proc setTextAlignment3*(self: gen_qlistwidget_types.QListWidgetItem, alignment: cint): void =
  fcQListWidgetItem_setTextAlignment2(self.h, cint(alignment))

proc background*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQListWidgetItem_background(self.h))

proc setBackground*(self: gen_qlistwidget_types.QListWidgetItem, brush: gen_qbrush_types.QBrush): void =
  fcQListWidgetItem_setBackground(self.h, brush.h)

proc foreground*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQListWidgetItem_foreground(self.h))

proc setForeground*(self: gen_qlistwidget_types.QListWidgetItem, brush: gen_qbrush_types.QBrush): void =
  fcQListWidgetItem_setForeground(self.h, brush.h)

proc checkState*(self: gen_qlistwidget_types.QListWidgetItem, ): cint =
  cint(fcQListWidgetItem_checkState(self.h))

proc setCheckState*(self: gen_qlistwidget_types.QListWidgetItem, state: cint): void =
  fcQListWidgetItem_setCheckState(self.h, cint(state))

proc sizeHint*(self: gen_qlistwidget_types.QListWidgetItem, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQListWidgetItem_sizeHint(self.h))
